--- a/sigs-angular/sigs/src/app/core/toolbar/toolbar.component.html
+++ b/sigs-angular/sigs/src/app/core/toolbar/toolbar.component.html
@@ -1,29 +1,17 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav
-    #drawer
-    class="sidenav"
-    fixedInViewport="true"
-    [attr.role]="(isHandset$ | async)? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async)? 'over' : 'side'"
-    [opened]="!(isHandset$ | async)">
-    <mat-toolbar color="primary">Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>Application Title</span>
-    </mat-toolbar>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark amber lighten-3">
+  <logo>
+      <a class="navbar-brand" href="#">
+        <img src="https://i.imgur.com/5uVl1vg.png" height="30" class="d-inline-block align-top" alt="">
+      </a>
+  </logo>
+  <links>
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a routerLink="/home" class="dropdown-item waves-light" mdbWavesEffect href="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/main" class="dropdown-item waves-light" mdbWavesEffect href="/main">App</a>
+        </li>
+      </ul>
+  </links>
+</mdb-navbar>
